GNOME not respecting chosen alert sound, using bell.oga
Affected version
Fedora Workstation 37, Gnome 43.2, Wayland
Bug summary
GNOME does not respect chosen sound from GNOME Settings > Sounds options menu, and instead uses 'drip' from the file /usr/share/sounds/freedesktop/stereo/bell.oga
. Bump from this thread on AskFedora yesterday https://ask.fedoraproject.org/t/after-f37-upgrade-gnome-desktop-env-alert-sound-is-wrong-and-unconfigurable/30192/5
Steps to reproduce
1. Step one
Select an Alert Sound from GNOME Settings > Sounds options menu
2. Step two
Trigger a terminal bell event or any other system bell event
What happened
These files are being changed every time I select a new Alert Sound via the GNOME Settings > Sounds options menu. So, this is what the regular alert sound options are doing: changing these files. But, these aren’t the files that get played when I cause a terminal bell event. I’ve verified that the sound being played is actually usr/share//sounds/freedesktop/stereo/bell.oga
. (I think this file has the ‘drip’ sound in it; and, maybe it used to have a different sound.)
I can prove this is what is happening by asking pactl to show me the latest sample files that were played after I cause the terminal bell event:
$ pactl list samples
Sample #0
Name: bell-window-system
Sample Specification: s16le 2ch 44100Hz
Channel Map: front-left,front-right
Volume: front-left: 65536 / 100% / 0.00 dB, front-right: 65536 / 100% / 0.00 dB
balance 0.00
Duration: 0.1s
Size: 24.0 KiB
Lazy: no
Filename: n/a
Properties:
client.api = "pipewire-pulse"
...
event.description = "Bell event"
event.id = "bell-window-system"
media.role = "event"
media.name = "bell-window-system"
media.filename = "/usr/share//sounds/freedesktop/stereo/bell.oga" <--this is sound I hear
In any case, GNOME doesn’t seem to be using my GNOME settings when a terminal bell event occurs. Since I see these user theme files changing, It seems as if I need to have the “User Themes” extension going. That seems to fix the issue for now. However, I can reproduce this across multiple systems, on vanilla GNOME. This seems to have only started in the last few days.
What did you expect to happen
I would expect that GNOME would use my selection chosen by GNOME Settings > Sounds options menu "/usr/share/sounds/gnome/default/alerts
"