sound: Update sounds directory mtime when changing alert sound

The libcanberra event-sound-cache that stores the resolved paths for
sound names can get stuck with the fallback sound (bell) after trying to
play an invalid symlink, such as can happen after updating to 43 which
removed some sounds which might have been selected as alert sounds
before.

Neither changing the symlink nor touching the theme directory seems to
invalidate that cache, but touching the sounds directory does.

This now updates the sounds directory mtime before triggering purging
the sound sample cache in the sound server via g-s-d so libcanberra will
load the correct sounds when repopulating the sample cache afterwards.

Closes: https://gitlab.gnome.org/GNOME/gnome-control-center/-/issues/2277